# CloudGuard

./: .gitignore  .replit  DISTRIBUTION.md  LICENSE  README.md  demo.py  demo_dual_purpose.py  demo_policy.yaml  pyproject.toml  replit.md
examples/01_router_minimal/: app.py  clouds.yaml
examples/02_output_guard/: app.py  clouds.yaml  requirements.txt
examples/03_cloud_discovery/: app.py  discovered_policy.yaml  requirements.txt  test_data.csv  training_data.csv
examples/04_sales_style/: app.py  generated_sales_policy.yaml  training_data.csv  training_data_with_embeddings.csv
src/cloudguard/: __init__.py  cli.py
src/cloudguard/adapters/: __init__.py
src/cloudguard/adapters/langgraph/: __init__.py  nodes.py  state_keys.py
src/cloudguard/core/: __init__.py  abc.py  distance.py  types.py  util.py
src/cloudguard/examples/: __init__.py  utils.py
src/cloudguard/policy/: __init__.py  index.py  loader.py  schema.py
src/cloudguard/providers/: __init__.py  mock_embedder.py  openai_embedder.py
src/cloudguard/runtime/: __init__.py  input_gate.py  output_gate.py
src/cloudguard/segmenters/: __init__.py  sentence.py
src/langgraph_cloudguard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_input_gate.py  test_mock_embedder.py  test_output_gate.py  test_policy_loader.py
